reports/Alimentation/Regulateur/regulateur_tension_serie_AOP_2.err.log
Traceback (most recent call last):
  File "C:\Users\sacha\anaconda3\envs\game\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\jupyter_core\utils\__init__.py", line 160, in wrapped
    return loop.run_until_complete(inner)
  File "C:\Users\sacha\anaconda3\envs\game\lib\asyncio\base_events.py", line 649, in run_until_complete
    return future.result()
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
## Courant de sortie en court circuit 

L'objectif est de voir le courant de sortie 
------------------

[1;36m  Input [1;32mIn [21][1;36m[0m
[1;33m    L'objectif est de voir le courant de sortie[0m
[1;37m     ^[0m
[1;31mSyntaxError[0m[1;31m:[0m unterminated string literal (detected at line 3)

SyntaxError: unterminated string literal (detected at line 3) (3083288120.py, line 3)

